--- a/css/style.css
+++ b/css/style.css
@@ -39,20 +39,10 @@ footer {
 
 header.masthead {
     position: relative;
-    background: url("../img/banner.jpg") no-repeat center center;
+    background: url("../img/banner-alt.jpg") no-repeat center center;
     background-size: cover;
     margin-top: 3rem;
     padding: 8rem 0;
-}
-  
-header.masthead .overlay {
-    position: absolute;
-    background-color: #212529;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    opacity: 0.5;
 }
 
 header.masthead h3 {
@@ -76,7 +66,8 @@ header.masthead h3 {
 }
 
 .announcements {
-    background-image:linear-gradient(90deg, #2a27f3, #7033e0);
+    border-bottom: 10px solid;
+    border-color: #2a27f3;
 }
 
 .carousel-item {
@@ -92,12 +83,22 @@ header.masthead h3 {
 /* About */
 
 .banner {
-    margin-top: 3rem;
-    height: 250px;
-    background-image:linear-gradient(90deg, #2a27f3, #7033e0);
+    margin-top: 4rem;
+    border-bottom: 10px solid;
+    border-color: #2a27f3;
 }
 
 .affimg {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
 }
+
+/* FAQ */
+
+.faq, .terms {
+    margin-top: 3rem;
+  }
+  
+  .terms {
+    min-height: 100vh;
+  }
